force-app/main/default/objects/Applicant_Details__c/fields/Applicant_Email__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Email__c</fullName>
    <formula>Email_Address__c</formula>
    <label>Applicant Email</label>
    <type>Text</type>
</CustomField>