force-app/main/default/objects/Applicant_Details__c/fields/Applicant_SNo__c.field-meta.xml
<CustomField>
    <fullName>Applicant_SNo__c</fullName>
    <formula>IF(
    ISPICKVAL(Applicant_Number__c, &quot;Primary Applicant&quot;), 1,
    IF(
        ISPICKVAL(Applicant_Number__c, &quot;Second Applicant&quot;), 2,
        IF(
            ISPICKVAL(Applicant_Number__c, &quot;Third Applicant&quot;), 3,
            IF(
                ISPICKVAL(Applicant_Number__c, &quot;Fourth Applicant&quot;), 4,
                IF(
                    ISPICKVAL(Applicant_Number__c, &quot;Fifth Applicant&quot;), 5,
                    NULL
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant SNo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>