force-app/main/default/objects/Applicant_Details__c/fields/BookingDetails__c.field-meta.xml
<CustomField>
    <fullName>BookingDetails__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BookingDetails</label>
    <referenceTo>Booking_Details__c</referenceTo>
    <relationshipLabel>ApplicantDetails</relationshipLabel>
    <relationshipName>ApplicantDetails</relationshipName>
    <type>Lookup</type>
</CustomField>