force-app/main/default/objects/Applicant_Details__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adilabad</fullName>
            </value>
            <value>
                <fullName>Agartala</fullName>
            </value>
            <value>
                <fullName>Agra</fullName>
            </value>
            <value>
                <fullName>Ahmedabad City</fullName>
            </value>
            <value>
                <fullName>Ahmednagar</fullName>
            </value>
            <value>
                <fullName>Aizawl</fullName>
            </value>
            <value>
                <fullName>Ajmer</fullName>
            </value>
            <value>
                <fullName>Akola</fullName>
            </value>
            <value>
                <fullName>Aligarh</fullName>
            </value>
            <value>
                <fullName>Allahabad</fullName>
            </value>
            <value>
                <fullName>Alleppey</fullName>
            </value>
            <value>
                <fullName>Almora</fullName>
            </value>
            <value>
                <fullName>Alwar</fullName>
            </value>
            <value>
                <fullName>Alwaye</fullName>
            </value>
            <value>
                <fullName>Amalapuram</fullName>
            </value>
            <value>
                <fullName>Amaravati</fullName>
            </value>
            <value>
                <fullName>Ambala</fullName>
            </value>
            <value>
                <fullName>Amreli</fullName>
            </value>
            <value>
                <fullName>Amritsar</fullName>
            </value>
            <value>
                <fullName>Anakapalle</fullName>
            </value>
            <value>
                <fullName>Anand</fullName>
            </value>
            <value>
                <fullName>Anantapur</fullName>
            </value>
            <value>
                <fullName>A - N Islands</fullName>
            </value>
            <value>
                <fullName>Anna Road H.O</fullName>
            </value>
            <value>
                <fullName>Arakkonam</fullName>
            </value>
            <value>
                <fullName>Asansol</fullName>
            </value>
            <value>
                <fullName>Aska</fullName>
            </value>
            <value>
                <fullName>Aurangabad(Bihar)</fullName>
            </value>
            <value>
                <fullName>Aurangabad(Maharashtra)</fullName>
            </value>
            <value>
                <fullName>Azamgarh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>