force-app/main/default/objects/Applicant_Details__c/fields/Contact_Person_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Relationship__c</fullName>
    <label>Contact Person Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PARTNER</fullName>
            </value>
            <value>
                <fullName>SELF</fullName>
            </value>
            <value>
                <fullName>HUSBAND</fullName>
            </value>
            <value>
                <fullName>WIFE</fullName>
            </value>
            <value>
                <fullName>MOTHER</fullName>
            </value>
            <value>
                <fullName>FATHER</fullName>
            </value>
            <value>
                <fullName>SON</fullName>
            </value>
            <value>
                <fullName>DAUGHTER</fullName>
            </value>
            <value>
                <fullName>MOTHER-IN-LAW</fullName>
            </value>
            <value>
                <fullName>FATHER-IN-LAW</fullName>
            </value>
            <value>
                <fullName>SON-IN-LAW</fullName>
            </value>
            <value>
                <fullName>DAUGHTER-IN-LAW</fullName>
            </value>
            <value>
                <fullName>GRAND MOTHER</fullName>
            </value>
            <value>
                <fullName>GRAND FATHER</fullName>
            </value>
            <value>
                <fullName>BROTHER</fullName>
            </value>
            <value>
                <fullName>SISTER</fullName>
            </value>
            <value>
                <fullName>BROTHER-IN-LAW</fullName>
            </value>
            <value>
                <fullName>SISTER-IN-LAW</fullName>
            </value>
            <value>
                <fullName>UNCLE</fullName>
            </value>
            <value>
                <fullName>AUNT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>