force-app/main/default/objects/Applicant_Details__c/fields/Designation_picklist__c.field-meta.xml
<CustomField>
    <fullName>Designation_picklist__c</fullName>
    <label>Designation SAP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Advocate</fullName>
            </value>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>Application Engineer</fullName>
            </value>
            <value>
                <fullName>Area Manager</fullName>
            </value>
            <value>
                <fullName>Assistant Advertising</fullName>
            </value>
            <value>
                <fullName>Assistant Engineer</fullName>
            </value>
            <value>
                <fullName>Assistant General Ma</fullName>
            </value>
            <value>
                <fullName>Assistant Manager</fullName>
            </value>
            <value>
                <fullName>Assistant Professor</fullName>
            </value>
            <value>
                <fullName>Assistant Project Ma</fullName>
            </value>
            <value>
                <fullName>Assistant Vice Presi</fullName>
            </value>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>Associate Architect</fullName>
            </value>
            <value>
                <fullName>Associate Consultant</fullName>
            </value>
            <value>
                <fullName>Associate Director</fullName>
            </value>
            <value>
                <fullName>Associate Manager</fullName>
            </value>
            <value>
                <fullName>Associate Partner</fullName>
            </value>
            <value>
                <fullName>Associate Vice Presi</fullName>
            </value>
            <value>
                <fullName>Branch Head</fullName>
            </value>
            <value>
                <fullName>Branch Manager</fullName>
            </value>
            <value>
                <fullName>Branch Sales Manager</fullName>
            </value>
            <value>
                <fullName>Business Consultant</fullName>
            </value>
            <value>
                <fullName>Business Facilitator</fullName>
            </value>
            <value>
                <fullName>Business Head</fullName>
            </value>
            <value>
                <fullName>Business Manager</fullName>
            </value>
            <value>
                <fullName>Business Manager-GEM</fullName>
            </value>
            <value>
                <fullName>Captain–Indian Navy</fullName>
            </value>
            <value>
                <fullName>Center Manager</fullName>
            </value>
            <value>
                <fullName>CEO and MD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>