force-app/main/default/objects/Applicant_Details__c/fields/isSigned__c.field-meta.xml
<CustomField>
    <fullName>isSigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E-Sign completed</label>
    <type>Checkbox</type>
</CustomField>