force-app/main/default/objects/Applicant_Details__c/fields/Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City__c</fullName>
    <label>Mailing City</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aberdeenshire</fullName>
            </value>
            <value>
                <fullName>Ain</fullName>
            </value>
            <value>
                <fullName>Aisne</fullName>
            </value>
            <value>
                <fullName>Alabama</fullName>
            </value>
            <value>
                <fullName>Alaska</fullName>
            </value>
            <value>
                <fullName>Alberta</fullName>
            </value>
            <value>
                <fullName>Allier</fullName>
            </value>
            <value>
                <fullName>Alpes (Hautes)</fullName>
            </value>
            <value>
                <fullName>Alpes (Hte-Provence)</fullName>
            </value>
            <value>
                <fullName>Alpes-Maritimes</fullName>
            </value>
            <value>
                <fullName>American Samoa</fullName>
            </value>
            <value>
                <fullName>Amnat Charoen</fullName>
            </value>
            <value>
                <fullName>Anglesey</fullName>
            </value>
            <value>
                <fullName>Ang Thong</fullName>
            </value>
            <value>
                <fullName>Angus/Forfarshire</fullName>
            </value>
            <value>
                <fullName>Antrim</fullName>
            </value>
            <value>
                <fullName>Ardeche</fullName>
            </value>
            <value>
                <fullName>Ardennes</fullName>
            </value>
            <value>
                <fullName>Argyllshire</fullName>
            </value>
            <value>
                <fullName>Ariege</fullName>
            </value>
            <value>
                <fullName>Arizona</fullName>
            </value>
            <value>
                <fullName>Arkansas</fullName>
            </value>
            <value>
                <fullName>Armagh</fullName>
            </value>
            <value>
                <fullName>Aube</fullName>
            </value>
            <value>
                <fullName>Aude</fullName>
            </value>
            <value>
                <fullName>Aust Capital Terr</fullName>
            </value>
            <value>
                <fullName>Aveyron</fullName>
            </value>
            <value>
                <fullName>Ayrshire</fullName>
            </value>
            <value>
                <fullName>Baden-Wurttemberg</fullName>
            </value>
            <value>
                <fullName>Banffshire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>