force-app/main/default/objects/Applicant_Details__c/fields/Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Mobile_No__c</fullName>
    <formula>(&quot;XXXXX&quot;&amp;right( Mobile_Number__c ,5))</formula>
    <label>Mobile No</label>
    <type>Text</type>
</CustomField>