force-app/main/default/objects/Applicant_Details__c/fields/Office_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Office_Address_Line_1__c</fullName>
    <label>Office Address Line 1</label>
    <length>60</length>
    <type>Text</type>
</CustomField>