force-app/main/default/objects/Applicant_Details__c/fields/Office_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Office_Address_Line_2__c</fullName>
    <label>Office Address Line 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>