force-app/main/default/objects/Applicant_Details__c/fields/Organisation_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Pincode__c</fullName>
    <label>Pincode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>