force-app/main/default/objects/Applicant_Details__c/fields/Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Organization_Name__c</fullName>
    <label>Company Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>