force-app/main/default/objects/Applicant_Details__c/fields/PancardNo__c.field-meta.xml
<CustomField>
    <fullName>PancardNo__c</fullName>
    <label>PancardNo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>