force-app/main/default/objects/Applicant_Details__c/fields/PassportNoDetails__c.field-meta.xml
<CustomField>
    <fullName>PassportNoDetails__c</fullName>
    <label>PassportNoDetails</label>
    <length>50</length>
    <type>Text</type>
</CustomField>