force-app/main/default/objects/Applicant_Details__c/fields/Permanent_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Address_Line_2__c</fullName>
    <label>Permanent Address Line 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>