force-app/main/default/objects/Applicant_Details__c/fields/Send_Applicant_Update_To_SAP__c.field-meta.xml
<CustomField>
    <fullName>Send_Applicant_Update_To_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Applicant Update To SAP</label>
    <type>Checkbox</type>
</CustomField>